--- a/FizzBuzz.App/FizzBuzz.App.csproj
+++ b/FizzBuzz.App/FizzBuzz.App.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>FizzBuzz</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -35,7 +36,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\FizzBuzz.Services\FizzBuzz.Services.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
     </ItemGroup>
 
 </Project>
