--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>FizzBuzz.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\FizzBuzz\FizzBuzz.csproj" />
+      <ProjectReference Include="..\FizzBuzz.App\FizzBuzz.App.csproj" />
     </ItemGroup>
 
 </Project>
