--- a/FizzBuzz.Tests/FizzBuzz.Tests.csproj
+++ b/FizzBuzz.Tests/FizzBuzz.Tests.csproj
@@ -7,11 +7,11 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <RootNamespace>FizzBuzz.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0-preview.7.24405.7" />
         <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0-preview.7.24405.7" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="NUnit" Version="3.14.0"/>
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\FizzBuzz.App\FizzBuzz.App.csproj" />
+      <ProjectReference Include="..\FizzBuzz.Services\FizzBuzz.Services.csproj" />
     </ItemGroup>
 
 </Project>
